--- a/web/assets/scss/front/global/_pagination.scss
+++ b/web/assets/scss/front/global/_pagination.scss
@@ -1,13 +1,13 @@
 .pagination {
-    margin: 0 auto;
+    margin: 15px auto 0;
     display: block;
-    border: 1px solid $mercury;
-    padding: 10px 0;
+    border-top: 1px solid $mercury;
+    padding: 15px 0;
     text-align: center;
 
     span {
         display: inline-block;
-        padding: 0px 10px;
+        padding: 0px 8px;
         margin: 0 3px;
         border: 1px solid $mercury;
         font-size: 13px;
